--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,4 +76,7 @@ dependencies {
     implementation 'androidx.room:room-runtime:2.5.2'
     kapt "androidx.room:room-compiler:2.5.2"
     implementation "androidx.room:room-ktx:2.5.2"
+
+    //secure pref
+    implementation "androidx.security:security-crypto:1.1.0-alpha06"
 }
